// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`journey hold geom, bbox & length 1`] = `
Array [
  Array [
    Array [
      0,
      -1,
      1,
    ],
    Array [
      1,
      1,
      0,
    ],
  ],
  Array [
    Array [
      -1,
      0,
      0,
    ],
    Array [
      0,
      1,
      1,
    ],
  ],
]
`;

exports[`journey hold geom, bbox & length 2`] = `
Array [
  -1,
  -1,
  1,
  1,
]
`;

exports[`journey hold geom, bbox & length 3`] = `
Object {
  "precision": 6,
  "type": "Distance",
  "unit": "m",
  "value": 405887,
}
`;

exports[`journey should export as GeoJSON 1`] = `
Object {
  "bbox": Array [
    -1,
    -1,
    1,
    1,
  ],
  "features": Array [
    Object {
      "geometry": Object {
        "coordinates": Array [
          0,
          -1,
          1,
        ],
      },
      "properties": Object {
        "timestamp": 4000,
      },
      "type": "Position",
    },
    Object {
      "geometry": Object {
        "coordinates": Array [
          1,
          1,
          0,
        ],
      },
      "properties": Object {
        "timestamp": 6000,
      },
      "type": "Position",
    },
    Object {
      "geometry": Object {
        "coordinates": Array [
          -1,
          0,
          0,
        ],
      },
      "properties": Object {
        "timestamp": 1000,
      },
      "type": "Position",
    },
    Object {
      "geometry": Object {
        "coordinates": Array [
          0,
          1,
          1,
        ],
      },
      "properties": Object {
        "timestamp": 2000,
      },
      "type": "Position",
    },
  ],
  "type": "FeatureCollection",
}
`;

exports[`journey should export as GeoJSON 2`] = `
Object {
  "features": Array [
    Object {
      "bbox": Array [
        0,
        -1,
        1,
        1,
      ],
      "geometry": Object {
        "coordinates": Array [
          Array [
            0,
            -1,
            1,
          ],
          Array [
            1,
            1,
            0,
          ],
        ],
        "type": "LineString",
      },
      "properties": Object {},
      "type": "Feature",
    },
    Object {
      "bbox": Array [
        -1,
        0,
        0,
        1,
      ],
      "geometry": Object {
        "coordinates": Array [
          Array [
            -1,
            0,
            0,
          ],
          Array [
            0,
            1,
            1,
          ],
        ],
        "type": "LineString",
      },
      "properties": Object {},
      "type": "Feature",
    },
  ],
  "type": "FeatureCollection",
}
`;

exports[`journey should export as GeoJSON 3`] = `
Object {
  "bbox": Array [
    -1,
    -1,
    1,
    1,
  ],
  "features": Array [
    Object {
      "geometry": Object {
        "coordinates": Array [
          Array [
            Array [
              1.000121,
              0.99994,
            ],
            Array [
              1.00006,
              1.000121,
            ],
            Array [
              0.999879,
              1.00006,
            ],
            Array [
              -0.000121,
              -0.99994,
            ],
            Array [
              -0.00006,
              -1.000121,
            ],
            Array [
              0.000121,
              -1.00006,
            ],
            Array [
              1.000121,
              0.99994,
            ],
          ],
        ],
        "type": "Polygon",
      },
      "properties": Object {
        "timestamp": 4000,
      },
      "type": "Feature",
    },
    Object {
      "geometry": Object {
        "coordinates": Array [
          Array [
            Array [
              0.000095,
              0.999905,
            ],
            Array [
              0.000095,
              1.000095,
            ],
            Array [
              -0.000095,
              1.000095,
            ],
            Array [
              -1.000095,
              0.000095,
            ],
            Array [
              -1.000095,
              -0.000095,
            ],
            Array [
              -0.999905,
              -0.000095,
            ],
            Array [
              0.000095,
              0.999905,
            ],
          ],
        ],
        "type": "Polygon",
      },
      "properties": Object {
        "timestamp": 1000,
      },
      "type": "Feature",
    },
  ],
  "type": "FeatureCollection",
}
`;

exports[`journey should export as JSON 1`] = `
Object {
  "branches": Array [
    Object {
      "features": Array [
        Object {
          "geometry": Object {
            "coordinates": Array [
              0,
              -1,
              1,
            ],
          },
          "properties": Object {
            "timestamp": 4000,
          },
          "type": "Position",
        },
        Object {
          "geometry": Object {
            "coordinates": Array [
              1,
              1,
              0,
            ],
          },
          "properties": Object {
            "timestamp": 6000,
          },
          "type": "Position",
        },
      ],
      "properties": Object {},
      "type": "Branch",
    },
    Object {
      "features": Array [
        Object {
          "geometry": Object {
            "coordinates": Array [
              -1,
              0,
              0,
            ],
          },
          "properties": Object {
            "timestamp": 1000,
          },
          "type": "Position",
        },
        Object {
          "geometry": Object {
            "coordinates": Array [
              0,
              1,
              1,
            ],
          },
          "properties": Object {
            "timestamp": 2000,
          },
          "type": "Position",
        },
      ],
      "properties": Object {},
      "type": "Branch",
    },
  ],
  "properties": Object {
    "name": "test flight",
  },
  "type": "Journey",
}
`;

exports[`journey should import as JSON 1`] = `
Object {
  "_id": 12,
  "branches": Array [
    Object {
      "features": Array [
        Object {
          "geometry": Object {
            "coordinates": Array [
              0,
              -1,
              1,
            ],
          },
          "properties": Object {
            "timestamp": 4000,
          },
          "type": "Position",
        },
        Object {
          "geometry": Object {
            "coordinates": Array [
              1,
              1,
              0,
            ],
          },
          "properties": Object {
            "timestamp": 6000,
          },
          "type": "Position",
        },
      ],
      "properties": Object {},
      "type": "Branch",
    },
    Object {
      "features": Array [
        Object {
          "geometry": Object {
            "coordinates": Array [
              -1,
              0,
              0,
            ],
          },
          "properties": Object {
            "timestamp": 1000,
          },
          "type": "Position",
        },
        Object {
          "geometry": Object {
            "coordinates": Array [
              0,
              1,
              1,
            ],
          },
          "properties": Object {
            "timestamp": 2000,
          },
          "type": "Position",
        },
      ],
      "properties": Object {},
      "type": "Branch",
    },
  ],
  "properties": Object {
    "name": "test flight",
  },
  "type": "Journey",
}
`;
